♻️ refactor: 실패한 테스트 주석처리, userKeyword 패키지 분리, dto projection 생성자 축소, history->searchHistory